--- a/react_frontend/package.json
+++ b/react_frontend/package.json
@@ -11,6 +11,7 @@
     "format": "npx prettier . -w"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
